--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500&display=swap');
 
-
+// Font family
 @font-face {
     font-family: 's';
     src: url('The Snow.otf');
